--- a/EECIP/EECIP.csproj
+++ b/EECIP/EECIP.csproj
@@ -221,6 +221,9 @@
     <Compile Include="App_Logic\DataAccessLayer\Post.cs">
       <DependentUpon>eecipEFDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="App_Logic\DataAccessLayer\PostFile.cs">
+      <DependentUpon>eecipEFDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="App_Logic\DataAccessLayer\Topic.cs">
       <DependentUpon>eecipEFDataModel.tt</DependentUpon>
     </Compile>
@@ -251,7 +254,13 @@
     <Compile Include="App_Logic\DataAccessLayer\T_OE_PROJECT_TAGS.cs">
       <DependentUpon>eecipEFDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="App_Logic\DataAccessLayer\T_OE_PROJECT_VOTES.cs">
+      <DependentUpon>eecipEFDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="App_Logic\DataAccessLayer\T_OE_REF_ENTERPRISE_PLATFORM.cs">
+      <DependentUpon>eecipEFDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="App_Logic\DataAccessLayer\T_OE_REF_ORG_TYPE.cs">
       <DependentUpon>eecipEFDataModel.tt</DependentUpon>
     </Compile>
     <Compile Include="App_Logic\DataAccessLayer\T_OE_REF_REGION.cs">
@@ -318,7 +327,9 @@
     <Content Include="App_Data\1b_CreateDatabaseForum.sql" />
     <Content Include="App_Data\1_CreateDatabase.sql" />
     <Content Include="App_Data\2_PopulateData.sql" />
-    <Content Include="App_Docs\ImportColumnsConfig.xml" />
+    <Content Include="App_Docs\ImportColumnsConfig.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="App_Docs\TestCases.txt" />
     <Content Include="App_Logic\DataAccessLayer\eecipEFDataModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -767,6 +778,8 @@
     <Content Include="Views\Admin\RefBadge.cshtml" />
     <Content Include="Views\Dashboard\EnterpriseSvcCard.cshtml" />
     <Content Include="Views\Forum\LatestTopics.cshtml" />
+    <Content Include="Views\Forum\PopularTags.cshtml" />
+    <Content Include="Views\Forum\EditPost.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
