--- a/EECIP/EECIP.csproj
+++ b/EECIP/EECIP.csproj
@@ -393,11 +393,19 @@
     <Content Include="Content\Images\Agencies\Wisconsin DNR.png" />
     <Content Include="Content\Images\Agencies\WV DEP.png" />
     <Content Include="Content\Images\Agencies\Wyoming DEQ.png" />
+    <Content Include="Content\Images\badges\AddAgency.png" />
+    <Content Include="Content\Images\badges\AddDocument.png" />
+    <Content Include="Content\Images\badges\AddProject.png" />
+    <Content Include="Content\Images\badges\AddProjectFive.png" />
+    <Content Include="Content\Images\badges\AddProjectTen.png" />
+    <Content Include="Content\Images\badges\AddUserProfile.png" />
+    <Content Include="Content\Images\badges\FiveLike.png" />
     <Content Include="Content\Images\badges\FiveLikeProject.png" />
     <Content Include="Content\Images\badges\FiveTopic.png" />
     <Content Include="Content\Images\badges\jedi.png" />
     <Content Include="Content\Images\badges\MemberForAYearBadge.png" />
     <Content Include="Content\Images\badges\MentionsUmbracoBadge.png" />
+    <Content Include="Content\Images\badges\OneLike.png" />
     <Content Include="Content\Images\badges\OneLikeProject.png" />
     <Content Include="Content\Images\badges\OneThousandPoints.png" />
     <Content Include="Content\Images\badges\OneTopic.png" />
@@ -406,10 +414,10 @@
     <Content Include="Content\Images\badges\PosterMarkAsSolutionBadge.png" />
     <Content Include="Content\Images\badges\PosterVoteUpBadge.png" />
     <Content Include="Content\Images\badges\recognised-post.png" />
+    <Content Include="Content\Images\badges\TenLike.png" />
     <Content Include="Content\Images\badges\TenLikeProject.png" />
     <Content Include="Content\Images\badges\TheGrouch.png" />
     <Content Include="Content\Images\badges\UserMarkAsSolutionBadge.png" />
-    <Content Include="Content\Images\badges\UserVoteUpBadge.png" />
     <Content Include="Content\Images\badges\you-favourited-your-first-post.png" />
     <Content Include="Content\Images\badges\your-post-got-favourited-by-another-member.png" />
     <Content Include="Content\Images\bg.png" />
