Verion 0.9 bug fixes

--- a/EECIP/Web.config
+++ b/EECIP/Web.config
@@ -21,7 +21,7 @@
     </httpModules>
     <!--**********FORMS AUTHENTICATION ************-->
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" />
+      <forms loginUrl="~/Home" timeout="2880" />
     </authentication>
     <!-- Sets class used for custom user authentication (comment out if using OWIN or remote IdentityServer) -->
     <membership userIsOnlineTimeWindow="40" defaultProvider="CustomMembershipProvider">
