--- a/EECIP/packages.config
+++ b/EECIP/packages.config
@@ -3,7 +3,11 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="BootstrapHoverDropdown" version="1.0.0" targetFramework="net461" />
+  <package id="ClosedXML" version="0.92.1" targetFramework="net461" />
+  <package id="DocumentFormat.OpenXml" version="2.7.2" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="ExcelNumberFormat" version="1.0.3" targetFramework="net461" />
+  <package id="FastMember.Signed" version="1.3.0" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.6.7" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
@@ -26,6 +30,8 @@
   <package id="Select2.js" version="4.0.5" targetFramework="net461" />
   <package id="Sendgrid" version="9.9.0" targetFramework="net461" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net461" />
+  <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net461" />
+  <package id="System.IO.Packaging" version="4.0.0" targetFramework="net461" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net461" />
   <package id="TinyMCE" version="4.7.12" targetFramework="net461" />
   <package id="toastr" version="2.1.1" targetFramework="net461" />
