--- a/EECIP/Web.config
+++ b/EECIP/Web.config
@@ -4,7 +4,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="EECIPEntities" connectionString="metadata=res://*/App_Logic.DataAccessLayer.eecipEFDataModel.csdl|res://*/App_Logic.DataAccessLayer.eecipEFDataModel.ssdl|res://*/App_Logic.DataAccessLayer.eecipEFDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=HP\SA;initial catalog=EECIP;persist security info=True;user id=sa;password=vivaan;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="EECIPEntities" connectionString="metadata=res://*/App_Logic.DataAccessLayer.eecipEFDataModel.csdl|res://*/App_Logic.DataAccessLayer.eecipEFDataModel.ssdl|res://*/App_Logic.DataAccessLayer.eecipEFDataModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=EECIP;persist security info=True;user id=eecip_login;password=FEG$GHWjpN!18g;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
