--- a/EECIP/EECIP.csproj
+++ b/EECIP/EECIP.csproj
@@ -813,6 +813,7 @@
     <Content Include="Scripts\tinymce\langs\readme.md" />
     <Content Include="Views\Admin\RefGovernanceAgencies.cshtml" />
     <Content Include="Views\Admin\RefGovernanceAgencyEdit.cshtml" />
+    <Content Include="Views\Admin\ExportData.cshtml" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
