1. Add Admin --> Export --> Likes 2. Enhance newsletter to include all projects/discussions if no interests match 3. Display projects with attachments in search results

--- a/EECIP/EECIP.csproj
+++ b/EECIP/EECIP.csproj
@@ -221,6 +221,12 @@
     <Compile Include="App_Logic\DataAccessLayer\PostFile.cs">
       <DependentUpon>eecipEFDataModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="App_Logic\DataAccessLayer\RPT_MON_PROJ_VOTE.cs">
+      <DependentUpon>eecipEFDataModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="App_Logic\DataAccessLayer\RPT_MON_TOPIC_VOTE.cs">
+      <DependentUpon>eecipEFDataModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="App_Logic\DataAccessLayer\SP_DISCUSSION_CREATE_COUNT_Result.cs">
       <DependentUpon>eecipEFDataModel.tt</DependentUpon>
     </Compile>
