--- a/EECIP/EECIP.csproj
+++ b/EECIP/EECIP.csproj
@@ -70,6 +70,9 @@
     <Reference Include="HtmlAgilityPack, Version=1.6.7.0, Culture=neutral, PublicKeyToken=bd319b19eaf3b43a, processorArchitecture=MSIL">
       <HintPath>..\packages\HtmlAgilityPack.1.6.7\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
+    <Reference Include="MailChimp.Net, Version=5.2.0.0, Culture=neutral, PublicKeyToken=37d26d538413c581, processorArchitecture=MSIL">
+      <HintPath>..\packages\MailChimp.Net.V3.5.2.0\lib\net45\MailChimp.Net.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Azure.Search, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Azure.Search.4.0.1-preview\lib\net452\Microsoft.Azure.Search.dll</HintPath>
     </Reference>
@@ -86,8 +89,8 @@
     <Reference Include="Microsoft.Spatial, Version=7.2.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Spatial.7.2.0\lib\portable-net45+win8+wpa81\Microsoft.Spatial.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SendGrid, Version=9.23.0.0, Culture=neutral, PublicKeyToken=4f047e93159395ca, processorArchitecture=MSIL">
       <HintPath>..\packages\SendGrid.9.23.0\lib\net452\SendGrid.dll</HintPath>
@@ -186,6 +189,7 @@
     <Compile Include="App_Logic\BusinessLogicLayer\Crypto.cs" />
     <Compile Include="App_Logic\BusinessLogicLayer\CustomRoleProvider.cs" />
     <Compile Include="App_Logic\BusinessLogicLayer\HtmlHelpers.cs" />
+    <Compile Include="App_Logic\BusinessLogicLayer\MailChimpHelper.cs" />
     <Compile Include="App_Logic\BusinessLogicLayer\SendGridHelper.cs" />
     <Compile Include="App_Logic\BusinessLogicLayer\UtilNodePosition.cs" />
     <Compile Include="App_Logic\BusinessLogicLayer\Utils.cs" />
