--- a/EECIP/packages.config
+++ b/EECIP/packages.config
@@ -10,6 +10,7 @@
   <package id="HtmlAgilityPack" version="1.6.7" targetFramework="net461" />
   <package id="jQuery" version="3.2.1" targetFramework="net461" />
   <package id="jQuery.Validation" version="1.16.0" targetFramework="net461" />
+  <package id="MailChimp.Net.V3" version="5.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net461" />
@@ -23,7 +24,7 @@
   <package id="Microsoft.Spatial" version="7.2.0" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net461" />
   <package id="Respond" version="1.4.2" targetFramework="net461" />
   <package id="Select2.js" version="4.0.5" targetFramework="net461" />
   <package id="SendGrid" version="9.23.0" targetFramework="net461" />
