1. Fix sync with search service when account created 2. increase length of announcements  3. update data dictionary

--- a/EECIP/EECIP.csproj
+++ b/EECIP/EECIP.csproj
@@ -903,6 +903,7 @@
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce-small.eot" />
     <Content Include="Scripts\tinymce\skins\lightgray\fonts\tinymce-mobile.woff" />
     <Content Include="Scripts\tinymce\langs\readme.md" />
+    <Content Include="Views\Admin\ProjectUpdates.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config">
